fixed text wrapping

--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -130,28 +130,25 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
-  display: grid;
-  grid-template-rows: 1fr 2fr 1fr;
+  display: block;
 }
 .red5 {
   width: 100%;
   height: 100px;
   background-color: red;
-  grid-row: 1/2;
 }
 .green5 {
   width: 140px;
   height: 140px;
   background-color: green;
-  grid-row: 2/3;
-  grid-column: 1/2;
+
   z-index: 2;
   float: left;
-  shape-outside: margin-box;
+  /* shape-outside: margin-box; */
 }
 .yellow5 {
   width: 100%;
-  height: 100%;
+  height: 250px;
   background-color: gold;
   grid-row: 2/3;
   grid-column: 1/2;
@@ -160,7 +157,6 @@
   width: 100%;
   height: 100px;
   background-color: blue;
-  grid-row: 3/4;
 }
 /* Activity 6 styles */
 .content6 {
